first prod build

--- a/uber-clone/app.json
+++ b/uber-clone/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ahmedsoussi21.uberclone"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "fb281733-6920-43c8-b8a2-949ff9118bb8"
+      }
     }
   }
 }
