--- a/uber-clone/package.json
+++ b/uber-clone/package.json
@@ -9,11 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
+    "install": "^0.13.0",
+    "npm": "^10.2.5",
     "react": "18.2.0",
     "react-native": "0.72.6"
   },
